avoid tooltips getting off-screen

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -102,8 +102,8 @@ button {
     padding: 5px;
     border-radius: 6px;
     bottom: 100%;
-    left: 50%;
-    transform: translateX(-50%);
+    left: 0;
+    transform: translateX(0);
     white-space: nowrap;
     overflow: visible;
 }
